--- a/javascript/signup.html
+++ b/javascript/signup.html
@@ -20,9 +20,8 @@
 <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
 <link rel="manifest" href="/docs/5.2/assets/img/favicons/manifest.json">
 <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-<link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
-
+//deleted the favicon cause it was unneccessary
 
     <style>
       /* .bd-placeholder-img {
