--- a/javascript/signup.html
+++ b/javascript/signup.html
@@ -90,6 +90,10 @@
     <div class="glowing-border">
       <input type="text" class="form-control top" name="firstname" placeholder="First Name" required autofocus/>
     </div>
+    
+    <div class="glowing-border">
+      <input type="text" class="form-control middle" name="middlename" placeholder="Middle Name" required/>
+    </div>
 
     <div class="glowing-border">
       <input type="text" class="form-control middle" name="lastname" placeholder="Last Name" required/>
